--- a/RULER CLUB.html
+++ b/RULER CLUB.html
@@ -16,7 +16,7 @@
 <TD COLSPAN="2" WIDTH="193" VALIGN="top">  </TD>
 </TR>
 <TR> <TD COLSPAN="2" WIDTH="193" VALIGN="top">
- </TD> </TR>
+ </TD> </TR><IMG SRC="dove1.gif" BORDER="0" HEIGHT="38" WIDTH="193">
 THE RULER CLUB
 <TR>
 <TD COLSPAN="2" ROWSPAN="4" WIDTH="136" VALIGN="top"> 
