Update A BASIC MODULE.html

--- a/A BASIC MODULE.html
+++ b/A BASIC MODULE.html
@@ -15,7 +15,7 @@
 
 
 </head>
-<body bgcolor="#445">
+<body background="nature-hd-wallpapers-blue-sky.jpg">
 
   <header class="navbar-inverse" role="banner">
     <div class="container">
